--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,13 @@
 <head>
   <script async type="application/javascript" src="main.js"></script>
   <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/d3-color@3"></script>
+  <script src="https://cdn.jsdelivr.net/npm/d3-interpolate@3"></script>
 
 </head>
 
 <body onload="main()">
-  <div>
+  <div id="#row1">
     <svg id="airspeed" stroke="black" version="1.0" width="300" viewBox="0 0 360 360" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#">
       <g>
         <path transform="matrix(1.2108 0 0 1.2108 -37.941 -35.211)" d="m325.71 177.21a145.71 145.71 0 1 1-291.43 0 145.71 145.71 0 1 1 291.43 0z" fill-rule="evenodd" />
@@ -53,6 +55,9 @@
       </g>
       <path id="center" transform="matrix(.13725 0 0 .13725 160.13 159.96)" d="m158.09 141.29a12.879 12.879 0 1 1-25.759 0 12.879 12.879 0 1 1 25.759 0z" fill="#fff" fill-rule="evenodd" />
     </svg>
+  </div>
+  <div id="#row2">
+
   </div>
 </body>
 
