--- a/public/index.html
+++ b/public/index.html
@@ -56,8 +56,8 @@
       <path id="center" transform="matrix(.13725 0 0 .13725 160.13 159.96)" d="m158.09 141.29a12.879 12.879 0 1 1-25.759 0 12.879 12.879 0 1 1 25.759 0z" fill="#fff" fill-rule="evenodd" />
     </svg>
   </div>
-  <div id="#row2">
-
+  <div id="row2">
+    <p id="log"></p>
   </div>
 </body>
 
